# gapic-config-validator

./: .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  WORKSPACE  docker-entrypoint.sh  go.mod  go.sum  release.sh  renovate.json  repositories.bzl  repositories_go.bzl
.circleci/: config.yml
.github/: sync-repo-settings.yaml
.github/workflows/: ci.yaml  release.yaml
agent/: Dockerfile  Makefile  config-checker.go  credentials.json
cmd/gapic-error-conformance/: BUILD.bazel  main.go
cmd/protoc-gen-gapic-validator/: BUILD.bazel  main.go
internal/config/: BUILD.bazel  config.pb.go
internal/validator/: BUILD.bazel  comparator.go  resolver.go  validator.go  validator_test.go
internal/validator/testdata/: BUILD.bazel  annotated.pb.go  annotated.proto  basic_test.pb.go  basic_test.proto  remote_definition.pb.go  remote_definition.proto  signature_test.pb.go  signature_test.proto
rules_validate/: validate.bzl
