load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleapis/gapic-config-validator/cmd/gapic-error-conformance",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/validator:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@com_github_jhump_protoreflect//desc/builder:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    ],
)

go_binary(
    name = "gapic-error-conformance",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
