load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/googleapis/gapic-config-validator/cmd/protoc-gen-gapic-validator",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/validator:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//protoc-gen-go/plugin:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-gapic-validator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
