load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.pb.go"],
    importpath = "github.com/googleapis/gapic-config-validator/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
