load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "comparator.go",
        "resolver.go",
        "validator.go",
    ],
    importpath = "github.com/googleapis/gapic-config-validator/internal/validator",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["validator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/validator/testdata:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@com_github_jhump_protoreflect//desc/builder:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
